fix: deposit clipboard rtl alignment

--- a/packages/cashier/src/modules/deposit-crypto/components/deposit-crypto-wallet-address/deposit-crypto-wallet-address.scss
+++ b/packages/cashier/src/modules/deposit-crypto/components/deposit-crypto-wallet-address/deposit-crypto-wallet-address.scss
@@ -13,14 +13,15 @@
     &__hash-container {
         padding: 0.8rem 1rem;
         border: 1px solid $color-grey-4;
-        border-radius: $BORDER_RADIUS 0 0 $BORDER_RADIUS;
+        border-start-start-radius: $BORDER_RADIUS;
+        border-end-start-radius: $BORDER_RADIUS;
     }
 
     &__action-container {
-        border-width: 1px 1px 1px 0px;
-        border-style: solid;
-        border-color: $color-grey-4;
-        border-radius: 0 $BORDER_RADIUS $BORDER_RADIUS 0;
+        border-block: 1px solid $color-grey-4;
+        border-inline-end: 1px solid $color-grey-4;
+        border-start-end-radius: $BORDER_RADIUS;
+        border-end-end-radius: $BORDER_RADIUS;
         padding: 1rem;
     }
 
